# mdspan-rs

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  TODO.md  amazing_prompt.md
.github/workflows/: check.yml
.zed/: settings.json
src/: BUILD.bazel  accessor.rs  clippy_lint.rs  extents.rs  layout.rs  lib.rs  mdspan.rs  span.rs  trigger_build_error.rs
src/internal/: BUILD.bazel  array_from_fn_rev.rs  constant.rs  direction.rs  exclusive_product_scan.rs  exclusive_product_scan_from.rs  fill_from_fn.rs  inner_product.rs  integer.rs  rev_if.rs  to_usize.rs
toolchain/: BUILD.bazel
tools/: BUILD.bazel
tools/asm_check/: BUILD.bazel  main.rs
tools/bazelisk/: install.sh
tools/clippy_no_fail/: clippy_no_fail_toolchain_tools.bzl
tools/emit_asm/: BUILD.bazel  aspect.bzl  emit_asm.bzl
tools/format/: BUILD.bazel
tools/rust-analyzer/: BUILD.bazel  aspect.bzl  project-config.bash  rust-analyzer-check.bash
tools/rustfix/: BUILD.bazel  aspect.bzl  main.rs
tools/starpls/: extension.bzl
tools/vscode/: find-bazel-binary-path.bash  find-buildifier-path.bash  find-rust-analyzer-path.bash  find-rustfmt-path.bash  render-settings.bash  rust-analyzer-check.bash
