load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(["rustfmt.toml"])

rust_library(
    name = "mdspan",
    srcs = ["src/lib.rs"],
    crate_name = "mdspan",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "mod_accessor",
        "mod_layout",
        "mod_mdspan",
    ],
)

rust_test(
    name = "mdspan_test",
    crate = ":mdspan",
)

rust_library(
    name = "mod_mdspan",
    srcs = ["src/mdspan.rs"],
    crate_name = "mod_mdspan",
    edition = "2024",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "mod_accessor",
        "mod_layout",
    ],
)

rust_test(
    name = "mod_mdspan_test",
    crate = ":mod_mdspan",
)

rust_library(
    name = "mod_accessor",
    srcs = ["src/accessor.rs"],
    crate_name = "mod_accessor",
    edition = "2024",
    tags = ["manual"],
    visibility = ["//visibility:private"],
)

rust_test(
    name = "mod_accessor_test",
    crate = ":mod_accessor",
)

rust_library(
    name = "mod_layout",
    srcs = ["src/layout.rs"],
    crate_name = "mod_layout",
    edition = "2024",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
    ],
)

rust_test(
    name = "mod_layout_test",
    crate = ":mod_layout",
)

rust_library(
    name = "clippy_lint",
    srcs = ["src/clippy_lint.rs"],
    crate_name = "clippy_lint",
    edition = "2024",
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [],
)
