module(name = "mdspan_rs")

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(versions = ["1.86.0"])
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_multirun",
    version = "0.12.0",
    dev_dependency = True,
)
