module(name = "mdspan_rs")

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(versions = ["1.86.0"])
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
)

# make these tool repos visible to the clippy_no_fail_toolchain_tools rule
use_repo(
    rust,
    "rust_linux_x86_64__x86_64-unknown-linux-gnu__stable_tools",
    "rust_macos_aarch64__aarch64-apple-darwin__stable_tools",
)

clippy_no_fail_toolchain_tools = use_repo_rule(
    "//tools/clippy_no_fail:clippy_no_fail_toolchain_tools.bzl",
    "clippy_no_fail_toolchain_tools",
)

clippy_no_fail_toolchain_tools(
    name = "local_clippy_no_fail_toolchain_tools",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_multirun",
    version = "0.12.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_shell",
    version = "0.6.1",
    dev_dependency = True,
)

starpls = use_extension(
    "//tools/starpls:extension.bzl",
    "starpls",
    dev_dependency = True,
)
use_repo(starpls, "starpls")
