module(name = "mdspan_rs")

bazel_dep(name = "rules_rust", version = "0.69.0")

crates = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crates.spec(
    package = "num-integer",
    version = "0.1.46",
)
crates.spec(
    package = "num-traits",
    version = "0.2.19",
)
crates.from_specs(name = "crates")
use_repo(crates, "crates")

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(versions = ["1.86.0"])
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains(
    "@rust_toolchains//:all",
)

# make these tool repos visible to the clippy_no_fail_toolchain_tools rule
use_repo(
    rust,
    "rust_linux_x86_64__x86_64-unknown-linux-gnu__stable_tools",
    "rust_macos_aarch64__aarch64-apple-darwin__stable_tools",
)

clippy_no_fail_toolchain_tools = use_repo_rule(
    "//tools/clippy_no_fail:clippy_no_fail_toolchain_tools.bzl",
    "clippy_no_fail_toolchain_tools",
)

clippy_no_fail_toolchain_tools(
    name = "local_clippy_no_fail_toolchain_tools",
)

tool_crates = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
    dev_dependency = True,
    isolate = True,
)
tool_crates.spec(
    package = "anyhow",
    version = "1.0.102",
)
tool_crates.spec(
    features = ["derive"],
    package = "clap",
    version = "4.6.0",
)
tool_crates.spec(
    package = "regex",
    version = "1.12.3",
)
tool_crates.spec(
    package = "serde",
    version = "1.0.228",
)
tool_crates.spec(
    package = "toml",
    version = "1.1.0",
)
tool_crates.spec(
    package = "rustfix",
    version = "0.9.4",
)
tool_crates.from_specs(name = "tool_crates")
use_repo(tool_crates, "tool_crates")

rust_host_tools = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust_host_tools",
    dev_dependency = True,
)
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    version = "nightly",
)
use_repo(
    rust_host_tools,
    "rust_host_tools_nightly",
)

bindeps = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
    dev_dependency = True,
    isolate = True,
)
bindeps.spec(
    artifact = "bin",
    package = "rustfilt",
    version = "0.2.1",
)
bindeps.annotation(
    crate = "rustfilt",
    gen_all_binaries = True,
)
bindeps.from_specs(
    name = "bindeps",
    host_tools = "@rust_host_tools_nightly",
)
use_repo(bindeps, "bindeps")

bazel_dep(
    name = "bazel_skylib",
    version = "1.9.0",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.2.0.2",
    dev_dependency = True,
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_multirun",
    version = "0.12.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_shell",
    version = "0.6.1",
    dev_dependency = True,
)

starpls = use_extension(
    "//tools/starpls:extension.bzl",
    "starpls",
    dev_dependency = True,
)
use_repo(starpls, "starpls")
