load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//src:__pkg__"])

rust_library(
    name = "constant",
    srcs = ["constant.rs"],
    crate_name = "constant",
    edition = "2024",
)

rust_library(
    name = "direction",
    srcs = ["direction.rs"],
    crate_name = "direction",
    edition = "2024",
)

rust_library(
    name = "exclusive_product_scan_from",
    srcs = ["exclusive_product_scan_from.rs"],
    crate_name = "exclusive_product_scan_from",
    edition = "2024",
    deps = [
        ":integer",
    ],
)

rust_library(
    name = "fill_from_fn",
    srcs = ["fill_from_fn.rs"],
    crate_name = "fill_from_fn",
    edition = "2024",
)

rust_library(
    name = "inner_product",
    srcs = ["inner_product.rs"],
    crate_name = "inner_product",
    edition = "2024",
    deps = [
        ":integer",
    ],
)

rust_library(
    name = "integer",
    srcs = ["integer.rs"],
    crate_name = "integer",
    edition = "2024",
    deps = [
        "@crates//:num-integer",
        "@crates//:num-traits",
    ],
)

rust_library(
    name = "rev_if",
    srcs = ["rev_if.rs"],
    crate_name = "rev_if",
    edition = "2024",
    deps = [
        ":direction",
        "@crates//:either",
    ],
)

rust_library(
    name = "to_usize",
    srcs = ["to_usize.rs"],
    crate_name = "to_usize",
    edition = "2024",
    deps = [
        ":integer",
    ],
)
