load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_multirun//:defs.bzl", "multirun")

[
    buildifier(
        name = "buildifier." + mode,
        exclude_patterns = [
            "./bazel-rust-analyzer/*",
        ],
        lint_mode = "warn",
        mode = mode,
    )
    for mode in [
        "check",
        "fix",
    ]
]

alias(
    name = "buildifier",
    actual = ":buildifier.fix",
)

multirun(
    name = "format",
    commands = [
        ":buildifier",
        "@rules_rust//:rustfmt",
    ],
)
